# mimir-webwright

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: install.sh
deploy/systemd/: mimir-webwright-football.service  mimir-webwright-football.timer  mimir-webwright-pisos.service  mimir-webwright-pisos.timer
scripts/: fetch_football.py  run_task.sh
src/mimir_webwright/: __init__.py  cli.py  environment.py  model.py  runner.py
src/mimir_webwright.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mimir_webwright/tasks/: __init__.py  football_api_fetcher.py  football_odds.py  football_odds_db.py  pisos_scraper.py
tests/: __init__.py  test_cli.py  test_environment.py  test_football_odds_db.py  test_football_odds_task.py  test_model.py  test_pisos_scraper.py  test_runner.py
workspace/scripts/: pisos_com_madrid.py
